# sparql-rc2-backend

./: .pre-commit-config.yaml  DEPLOYMENT.md  README.md  config.py  main.py  pyproject.toml
models/: aggregator.py  exceptions.py  read.py  revision.py  revisions.py  splitter.py  user_count.py  validator.py
tests/: test_aggregator.py  test_splitter.py  test_validator.py
